fix flexbox bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,31 +40,21 @@ button {
   flex-direction: column;
   align-items: flex-start;
   background-color: #1e1e1e; /* Slightly lighter dark background */
+  /* border: solid 1px red; */
 }
 
 .loading-circle {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 2s linear infinite;
+  border: 4px solid #f3f3f3; /* Light grey border */
+  border-top: 4px solid #3498db; /* Blue border on top */
+  border-radius: 50%; /* Make it a circle */
+  width: 50px; /* Width of the circle */
+  height: 50px; /* Height of the circle */
+  animation: spin 2s linear infinite; /* Spin animation */
   position: relative;
+  flex: none;
 }
 
-.loading-circle::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #f3f3f3;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-/*  */
+/* Keyframes for the spin animation */
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
